<resources>

    <!--<string name="app_name">Neyyar 3.0</string>
    <string name="ofabee">Ofabee 3.0</string>
    <string name="neyyar">Neyyar 3.0</string>-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_message">Messages</string>
    <string name="nav_support_chat">Support Chat</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_wishlist">Wishlist</string>
    <string name="nav_news">News And Events</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_my_course">Subscriptions</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_practice">Practice Test</string>

    <!--Login screen texts-->
    <string name="sign_in_text">Sign In</string>
    <string name="sign_in_message_text">Enter your Mobile number / Email \naddress to sign in your account</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="email_address_text">Email Address</string>
    <string name="continue_text">Continue</string>
    <string name="no_account_text">Don\'t have an Account?</string>
    <string name="create_now_text">Create Now</string>
    <string name="skip_text">Skip</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>

    <!--Forgot password screen texts-->
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_pwd_message_text">Enter your Email Address to verify your account.</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_password_detail_text">Please enter new password</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="reset_password_button_text">Change Password</string>

    <!--Registration screen texts-->
    <string name="join_now_text">Join Now</string>
    <string name="name_text">Name</string>
    <string name="password_text">Password</string>
    <string name="have_account_text">Have an Account,</string>
    <string name="telephone_code_india">+91&#160;</string>

    <!--OTP screen texts-->
    <string name="verify_otp_text">Verify OTP</string>
    <string name="otp_detail_text">A OTP has been send to your number</string>
    <string name="otp_invalid_text">Invalid OTP</string>

    <!--Validation texts-->
    <string name="email_empty_text">Enter Email</string>
    <string name="email_invalid_text">Invalid Email</string>
    <string name="number_empty_text">Enter Number</string>
    <string name="number_invalid_text">Invalid Number</string>
    <string name="password_empty_text">Enter Password</string>
    <string name="password_format_error_text">Password must contain atleast 6 characters</string>
    <string name="password_invalid_text">Invalid Password</string>
    <string name="name_empty_text">Enter Name</string>
    <string name="email_valid_text">Valid Email</string>

    <!--Mycourse screen texts-->
    <string name="course_status_not_started">Start Course</string>
    <string name="course_status_in_progress">Resume Course</string>
    <string name="course_status_completed">Course Completed</string>
    <string name="course_expired">Course Expired</string>
    <string name="course_will_expire">Expires In </string>

    <!--Choose course category screen texts-->
    <string name="choose_course_category_title">You Wish to Study</string>

    <!--Others-->
    <string name="something_went_wrong_text">Something went wrong! Please try again later.</string>
    <string name="service_not_found_text">Service not found! Please try again later.</string>
    <string name="check_internet_text">Please check your internet connection !!!</string>
    <string name="text_ok">OK</string>
    <string name="text_alert">Alert!!!</string>
    <string name="text_error_message">Message</string>
    <string name="name_hint">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lores_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Why do we use it?It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="course_will_expire_today">Expires Today</string>
    <string name="course_will_expire_tomorrow">Expires Tomorrow</string>
    <string name="course_suspended">Suspended</string>
    <string name="register">Register</string>

</resources>
