<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_notifications"
        android:title="@string/nav_notification" />
    <item
        android:id="@+id/nav_messages"
        android:title="@string/nav_message" />

    <item
        android:id="@+id/nav_support_chat"
        android:title="@string/nav_support_chat" />

    <item
        android:id="@+id/nav_bookmark"
        android:title="@string/nav_bookmark" />

    <item
        android:id="@+id/nav_wishlist"
        android:title="@string/nav_wishlist" />

    <item
        android:id="@+id/nav_news"
        android:title="@string/nav_news" />

    <item
        android:id="@+id/nav_faq"
        android:title="@string/nav_faq" />

</menu>