<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_home_icon_selector"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/nav_my_course_icon_selector"
        android:title="@string/nav_my_course" />

     <item
         android:id="@+id/navigation_explore"
         android:icon="@drawable/nav_explore_icon_selector"
         android:title="@string/nav_explore" />

    <!--<item
        android:id="@+id/navigation_practice"
        android:icon="@drawable-mdpi/ic_explore"
        android:visible="false"
        android:title="@string/nav_practice" />-->

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/nav_profile_icon_selector"
        android:title="@string/nav_profile" />

</menu>