<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.module.forgotpassword.ForgotPasswordActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Space_180"
        android:layout_marginEnd="@dimen/Space_90"
        android:background="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--Logo-->
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView"
                        android:layout_width="@dimen/Space_60"
                        android:layout_height="@dimen/Space_60"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/Space_40"
                        app:srcCompat="@drawable/ic_logo" />

                    <!--Forgot password Text-->
                    <TextView
                        android:id="@+id/signInTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/Space_20"
                        android:layout_marginTop="@dimen/Space_20"
                        android:padding="@dimen/Space_5"
                        android:fontFamily="@font/opensans_extrabold"
                        android:text="@string/forgot_password_text"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_26" />

                    <!--Sign in description Text-->
                    <com.enfin.ofabee3.utils.AvenirTextView
                        android:id="@+id/signInMessageTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/Space_20"
                        android:layout_marginTop="@dimen/Space_10"
                        android:layout_marginEnd="@dimen/Space_20"
                        android:padding="@dimen/Space_5"
                        android:text="@string/forgot_pwd_message_text"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_18" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/Space_20"
                        android:layout_marginTop="@dimen/Space_20"
                        android:layout_marginEnd="@dimen/Space_20">

                        <!--Layout for email -->
                        <LinearLayout
                            android:id="@+id/emailLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:animateLayoutChanges="true"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.enfin.ofabee3.utils.AvenirEditText
                                    android:id="@+id/emailEditText"
                                    android:layout_width="match_parent"
                                    android:backgroundTint="#f0f0f0"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/email_address_text"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:textSize="@dimen/text_16" />

                                <com.enfin.ofabee3.utils.OpenSansTextView
                                    android:id="@+id/email_error_tv"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textColor="@color/colorRed"
                                    android:textSize="@dimen/text_10"
                                    android:textStyle="normal"
                                    android:visibility="gone" />

                            </com.google.android.material.textfield.TextInputLayout>



                        </LinearLayout>

                    </RelativeLayout>


                    <!--Login button-->
                    <com.enfin.ofabee3.utils.AvenirButton
                        android:id="@+id/continueButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/Space_20"
                        android:layout_marginTop="@dimen/Space_10"
                        android:layout_marginEnd="@dimen/Space_20"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/Space_5"
                        android:text="@string/continue_text"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_16" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <!--Bottom layer-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">

                <!--Create account layout-->
                <LinearLayout
                    android:id="@+id/createNowLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/Space_10"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.enfin.ofabee3.utils.AvenirTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account_text"
                        android:textColor="@color/colorGrey"
                        android:textStyle="bold"
                        android:elevation="@dimen/Space_10"
                        android:textSize="@dimen/text_14" />

                    <com.enfin.ofabee3.utils.AvenirTextView
                        android:id="@+id/createNowTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/Space_5"
                        android:text="@string/create_now_text"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>

                <!--Skip view-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.enfin.ofabee3.utils.AvenirTextView
                        android:id="@+id/skipTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="@dimen/Space_20"
                        android:layout_marginBottom="@dimen/Space_20"
                        android:drawableEnd="@drawable/ic_arrow_forward_grey_24dp"
                        android:gravity="center"
                        android:text="@string/skip_text"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/text_14"
                        android:visibility="gone" />
                </RelativeLayout>

            </RelativeLayout>

        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>